<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <Spinner
        android:id="@+id/users_sp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/food_name_til"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/food_name"
        app:counterEnabled="true"

        app:counterMaxLength="50"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:helperText="Add food entry"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/users_sp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/food_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/calorie_til"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/calorie"
        app:counterEnabled="true"
        app:counterMaxLength="10"

        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:helperText="Calorie consumed"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/btn_add_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food_name_til">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/calorie_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date_til"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:hint="@string/date"
        app:layout_constraintEnd_toStartOf="@+id/time_til"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calorie_til">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="date"
            android:text="10-10-2022" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/time_til"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/time"
        app:layout_constraintEnd_toEndOf="@+id/calorie_til"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/date_til"
        app:layout_constraintTop_toTopOf="@+id/date_til">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/time_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="date"
            android:text="10:10 pm" />


    </com.google.android.material.textfield.TextInputLayout>


    <ImageView
        android:id="@+id/iv_food_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_add_image"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/btn_add_image"
        app:layout_constraintStart_toStartOf="@+id/btn_add_image"
        app:layout_constraintTop_toBottomOf="@+id/food_name_til" />


    <Button
        android:id="@+id/btn_add_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Add Image"
        app:layout_constraintBottom_toBottomOf="@+id/date_til"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_food_image" />

    <Button
        android:id="@+id/btn_add_food"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_til" />


    <Button
        android:id="@+id/btn_update_food"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="Update"
        android:visibility="gone"
        android:backgroundTint="@color/teal_200"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/btn_delete_food"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_food" />


    <Button
        android:id="@+id/btn_delete_food"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Delete"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:backgroundTint="@color/progress_2"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/btn_update_food"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_food" />


</androidx.constraintlayout.widget.ConstraintLayout>